tier-2-intermediate/15-istio-service-mesh/k8s/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: production
spec:
  mtls:
    mode: STRICT   # all pod-to-pod traffic must use mTLS
